# travelbuddy-ai

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  cloudbuild.yaml  deploy-script.sh  pyproject.toml
.github/workflows/: deploy-backend.yml  deploy-cloud-run.yml  deploy-frontend.yml
docs/: DEPLOYMENT.md
docs/api/: openapi.json
document/: PRODUCT_DOCUMENTATION.md  flowdiagram.md
travel_planner/: LICENSE  README.md  __init__.py  pyproject.toml  test_setup.py
travel_planner/src/travel_planner/: __init__.py  prompts.py  travel_planning_agent.py  travel_planning_tool.py
travel_planner_agent/: README.md  __init__.py  pyproject.toml  test_actual_api_response.py  test_ai_single_day_bug.py  test_booking_links.py  test_budget_insufficient_fix.py  test_complete_itinerary_flow.py  test_final_itinerary_fix.py  test_itinerary_structure.py  test_long_duration_trips.py  test_personalized_planner.py  test_real_ui_simulation.py  test_simple_budget_fix.py
travel_planner_agent/src/travel_planner_agent/: __init__.py  travel_planning_agent.py  travel_planning_tool.py
travel_planner_ui/: .env.example  .env.production  .gitignore  Dockerfile  README.md  TEST_INSTRUCTIONS.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
travel_planner_ui/.claude/: settings.local.json
travel_planner_ui/server/: .env.production  Dockerfile  README.md  main.py  requirements.txt
travel_planner_ui/src/: App.tsx  main.tsx  vite-env.d.ts
travel_planner_ui/src/components/forms/: TripPlanningForm.tsx
travel_planner_ui/src/components/results/: TripResultsDisplay.tsx
travel_planner_ui/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  DatePicker.tsx  Input.tsx  LoadingSpinner.tsx  Select.tsx
travel_planner_ui/src/hooks/: useTripPlanner.ts
travel_planner_ui/src/pages/: HomePage.tsx
travel_planner_ui/src/services/: api.ts
travel_planner_ui/src/styles/: globals.css
travel_planner_ui/src/types/: index.ts
travel_planner_ui/src/utils/: constants.ts
weather_tool/: README.md  pyproject.toml
weather_tool/src/weather_tool/: __init__.py  server.py  weather_tool.py
