[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather-tool"
version = "0.1.0"
description = "Weather MCP tool and client utilities using Open-Meteo"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "TravelBuddy AI"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
  "aiohttp>=3.8.0",
  "python-dotenv>=1.0.0",
  "mcp>=1.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/your-username/weather-tool"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_tool"]

